[project]
name = "susan-leetcode-journal"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.6"
]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
select = ["E","F","W","I"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


